// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component should match a snapshot for cta content alternate settings 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            role="columnheader"
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
              role="img"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="foo-bar"
              role="cell"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css."
                  role="img"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      role="table"
    >
      <mock-styled.div
        role="row"
      >
        <mock-styled.div
          role="columnheader"
        >
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
            role="img"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
        role="row"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="foo-bar"
            role="cell"
          >
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css."
                role="img"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component should match a snapshot for expandable content alternate settings 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="0"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            role="columnheader"
          >
            Some Content
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="foo-bar"
              role="cell"
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
                role="img"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            aria-hidden="false"
            classname=""
          >
            <mock-styled.div>
              <p>
                I am the content that is only visible when expanded
              </p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="0"
      role="table"
    >
      <mock-styled.div
        role="row"
      >
        <mock-styled.div
          role="columnheader"
        >
          Some Content
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
        role="row"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="foo-bar"
            role="cell"
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
              role="img"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          aria-hidden="false"
          classname=""
        >
          <mock-styled.div>
            <p>
              I am the content that is only visible when expanded
            </p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component should match a snapshot with full props and cta content 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="8"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            aria-label="Property"
            classname="mock-css.
  grid-column-end: span 2;
"
            role="columnheader"
          >
            Property
          </mock-styled.div>
          <mock-styled.div
            aria-label="Customer"
            role="columnheader"
          >
            Customer
          </mock-styled.div>
          <mock-styled.div
            aria-label="Client A/C"
            role="columnheader"
          >
            Client A/C
          </mock-styled.div>
          <mock-styled.div
            aria-label="Description"
            role="columnheader"
          >
            Description
          </mock-styled.div>
          <mock-styled.div
            aria-label="Request Date"
            role="columnheader"
          >
            Request Date
          </mock-styled.div>
          <mock-styled.div
            aria-label="Amount"
            role="columnheader"
          >
            Amount
          </mock-styled.div>
          <mock-styled.div
            aria-label="Payment Status"
            role="columnheader"
          >
            Payment Status
          </mock-styled.div>
          <mock-styled.div
            role="columnheader"
          >
            Some Action
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css."
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  grid-column-end: span 2;
 mock-css."
              role="cell"
            >
              <mock-styled.span
                classname="mock-css."
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Property"
              >
                Mt Ash Jacket, Brassey Road
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.span
                classname="mock-css."
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer"
              >
                Mr Johnny Corrigan
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                Alternate Lettings Client Acc
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                Tenant Payment Request
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Request Date"
              >
                19 Apr 2021
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                £50.00
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                Not Requested
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="foo-bar"
              role="cell"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css."
                  role="img"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="8"
      role="table"
    >
      <mock-styled.div
        role="row"
      >
        <mock-styled.div
          aria-label="Property"
          classname="mock-css.
  grid-column-end: span 2;
"
          role="columnheader"
        >
          Property
        </mock-styled.div>
        <mock-styled.div
          aria-label="Customer"
          role="columnheader"
        >
          Customer
        </mock-styled.div>
        <mock-styled.div
          aria-label="Client A/C"
          role="columnheader"
        >
          Client A/C
        </mock-styled.div>
        <mock-styled.div
          aria-label="Description"
          role="columnheader"
        >
          Description
        </mock-styled.div>
        <mock-styled.div
          aria-label="Request Date"
          role="columnheader"
        >
          Request Date
        </mock-styled.div>
        <mock-styled.div
          aria-label="Amount"
          role="columnheader"
        >
          Amount
        </mock-styled.div>
        <mock-styled.div
          aria-label="Payment Status"
          role="columnheader"
        >
          Payment Status
        </mock-styled.div>
        <mock-styled.div
          role="columnheader"
        >
          Some Action
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css."
        role="row"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  grid-column-end: span 2;
 mock-css."
            role="cell"
          >
            <mock-styled.span
              classname="mock-css."
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Property"
            >
              Mt Ash Jacket, Brassey Road
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.span
              classname="mock-css."
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Customer"
            >
              Mr Johnny Corrigan
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              Alternate Lettings Client Acc
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              Tenant Payment Request
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Request Date"
            >
              19 Apr 2021
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              £50.00
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              Not Requested
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="foo-bar"
            role="cell"
          >
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css."
                role="img"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component should match a snapshot with full props and expandable content 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="8"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            aria-label="Property"
            classname="mock-css.
  grid-column-end: span 2;
"
            role="columnheader"
          >
            Property
          </mock-styled.div>
          <mock-styled.div
            aria-label="Customer"
            role="columnheader"
          >
            Customer
          </mock-styled.div>
          <mock-styled.div
            aria-label="Client A/C"
            role="columnheader"
          >
            Client A/C
          </mock-styled.div>
          <mock-styled.div
            aria-label="Description"
            role="columnheader"
          >
            Description
          </mock-styled.div>
          <mock-styled.div
            aria-label="Request Date"
            role="columnheader"
          >
            Request Date
          </mock-styled.div>
          <mock-styled.div
            aria-label="Amount"
            role="columnheader"
          >
            Amount
          </mock-styled.div>
          <mock-styled.div
            aria-label="Payment Status"
            role="columnheader"
          >
            Payment Status
          </mock-styled.div>
          <mock-styled.div
            role="columnheader"
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
              role="img"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css."
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  grid-column-end: span 2;
 mock-css."
              role="cell"
            >
              <mock-styled.span
                classname="mock-css."
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Property"
              >
                Mt Ash Jacket, Brassey Road
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.span
                classname="mock-css."
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer"
              >
                Mr Johnny Corrigan
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                Alternate Lettings Client Acc
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                Tenant Payment Request
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Request Date"
              >
                19 Apr 2021
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                £50.00
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
              role="cell"
            >
              <mock-styled.div>
                Not Requested
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="cell"
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
                role="img"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            aria-hidden="true"
            classname="mock-css."
          >
            <mock-styled.div>
              <p>
                I am the content that is only visible when expanded
              </p>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="8"
      role="table"
    >
      <mock-styled.div
        role="row"
      >
        <mock-styled.div
          aria-label="Property"
          classname="mock-css.
  grid-column-end: span 2;
"
          role="columnheader"
        >
          Property
        </mock-styled.div>
        <mock-styled.div
          aria-label="Customer"
          role="columnheader"
        >
          Customer
        </mock-styled.div>
        <mock-styled.div
          aria-label="Client A/C"
          role="columnheader"
        >
          Client A/C
        </mock-styled.div>
        <mock-styled.div
          aria-label="Description"
          role="columnheader"
        >
          Description
        </mock-styled.div>
        <mock-styled.div
          aria-label="Request Date"
          role="columnheader"
        >
          Request Date
        </mock-styled.div>
        <mock-styled.div
          aria-label="Amount"
          role="columnheader"
        >
          Amount
        </mock-styled.div>
        <mock-styled.div
          aria-label="Payment Status"
          role="columnheader"
        >
          Payment Status
        </mock-styled.div>
        <mock-styled.div
          role="columnheader"
        >
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
            role="img"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css."
        role="row"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  grid-column-end: span 2;
 mock-css."
            role="cell"
          >
            <mock-styled.span
              classname="mock-css."
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Property"
            >
              Mt Ash Jacket, Brassey Road
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.span
              classname="mock-css."
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Customer"
            >
              Mr Johnny Corrigan
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              Alternate Lettings Client Acc
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              Tenant Payment Request
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Request Date"
            >
              19 Apr 2021
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              £50.00
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
            role="cell"
          >
            <mock-styled.div>
              Not Requested
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="cell"
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
              role="img"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          aria-hidden="true"
          classname="mock-css."
        >
          <mock-styled.div>
            <p>
              I am the content that is only visible when expanded
            </p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component should match a snapshot with varied number columns 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
